Fix GitHub theme on dark mode

--- a/content/github.css
+++ b/content/github.css
@@ -1,18 +1,20 @@
 @namespace url(http://www.w3.org/1999/xhtml);
 
 @-moz-document domain("github.com") {
-  .Header {
-    background: #edeef1 !important;
-    border-bottom: 1px solid #e5e5e5 !important;
-  }
+  @media (prefers-color-scheme: light) {
+    .Header {
+      background: #edeef1 !important;
+      border-bottom: 1px solid #e5e5e5 !important;
+    }
 
-  .Header-link {
-    color: var(--color-header-bg) !important;
-  }
+    .Header-link {
+      color: var(--color-header-bg) !important;
+    }
 
-  .header-search-wrapper {
-    background: white !important;
-    border: 1px solid #cacacb;
-    color: var(--color-header-bg) !important;
+    .header-search-wrapper {
+      background: white !important;
+      border: 1px solid #cacacb;
+      color: var(--color-header-bg) !important;
+    }
   }
 }
